lab1/ParLab.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParLab.y
-----------------------------------------------------------------------------

state 36 contains 1 shift/reduce conflicts.
state 63 contains 1 shift/reduce conflicts.
state 247 contains 1 shift/reduce conflicts.
state 266 contains 1 shift/reduce conflicts.
state 269 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pListArg -> ListArg                         (3)
	%start_pListStm -> ListStm                         (4)
	%start_pArg -> Arg                                 (5)
	%start_pDecl -> Decl                               (6)
	%start_pStm -> Stm                                 (7)
	%start_pExp16 -> Exp16                             (8)
	%start_pExp15 -> Exp15                             (9)
	%start_pExp14 -> Exp14                             (10)
	%start_pExp13 -> Exp13                             (11)
	%start_pExp12 -> Exp12                             (12)
	%start_pExp11 -> Exp11                             (13)
	%start_pExp10 -> Exp10                             (14)
	%start_pExp9 -> Exp9                               (15)
	%start_pExp8 -> Exp8                               (16)
	%start_pExp4 -> Exp4                               (17)
	%start_pExp3 -> Exp3                               (18)
	%start_pExp2 -> Exp2                               (19)
	%start_pExp1 -> Exp1                               (20)
	%start_pExp -> Exp                                 (21)
	%start_pExp5 -> Exp5                               (22)
	%start_pExp6 -> Exp6                               (23)
	%start_pExp7 -> Exp7                               (24)
	%start_pListExp -> ListExp                         (25)
	%start_pListString -> ListString                   (26)
	%start_pListId -> ListId                           (27)
	%start_pType -> Type                               (28)
	%start_pTypes -> Types                             (29)
	%start_pQualifiedConstElem -> QualifiedConstElem   (30)
	%start_pListTypes -> ListTypes                     (31)
	%start_pQualifiedConstant -> QualifiedConstant     (32)
	%start_pListQualifiedConstElem -> ListQualifiedConstElem   (33)
	Integer -> L_integ                                 (34)
	Double -> L_doubl                                  (35)
	Char -> L_charac                                   (36)
	String -> L_quoted                                 (37)
	Id -> L_Id                                         (38)
	Program -> ListDef                                 (39)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (40)
	Def -> Type Id '(' ListArg ')' ';'                 (41)
	Def -> 'using' QualifiedConstant ';'               (42)
	Def -> 'typedef' Type Id ';'                       (43)
	Def -> Type Id '=' Exp ';'                         (44)
	Def -> Decl ';'                                    (45)
	ListDef ->                                         (46)
	ListDef -> ListDef Def                             (47)
	ListArg ->                                         (48)
	ListArg -> Arg                                     (49)
	ListArg -> Arg ',' ListArg                         (50)
	ListStm ->                                         (51)
	ListStm -> ListStm Stm                             (52)
	Arg -> Type                                        (53)
	Arg -> Type Id                                     (54)
	Arg -> 'const' Type Id                             (55)
	Arg -> 'const' Type                                (56)
	Arg -> 'const' Type Id '=' Exp                     (57)
	Arg -> Type Id '=' Exp                             (58)
	Decl -> 'const' Type                               (59)
	Decl -> 'const' Type Id                            (60)
	Decl -> Type Id                                    (61)
	Decl -> 'const' Type Id ',' ListId                 (62)
	Decl -> Type Id ',' ListId                         (63)
	Decl -> Type Id '=' Exp                            (64)
	Decl -> 'const' Type Id '=' Exp                    (65)
	Stm -> 'typedef' Type Id ';'                       (66)
	Stm -> Exp ';'                                     (67)
	Stm -> Decl ';'                                    (68)
	Stm -> 'return' Exp ';'                            (69)
	Stm -> 'while' '(' Exp ')' Stm                     (70)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (71)
	Stm -> '{' ListStm '}'                             (72)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (73)
	Stm -> 'if' '(' Exp ')' Stm                        (74)
	Stm -> 'for' '(' Decl ';' Exp ';' Exp ')' Stm      (75)
	Stm -> 'const' Type Id '=' Exp ';'                 (76)
	Exp16 -> QualifiedConstant                         (77)
	Exp16 -> ListString                                (78)
	Exp16 -> Integer                                   (79)
	Exp16 -> Double                                    (80)
	Exp16 -> 'true'                                    (81)
	Exp16 -> Char                                      (82)
	Exp16 -> 'false'                                   (83)
	Exp16 -> '(' Exp ')'                               (84)
	Exp15 -> Id '[' Exp ']'                            (85)
	Exp15 -> Id '(' ListExp ')'                        (86)
	Exp15 -> Exp16                                     (87)
	Exp14 -> Exp14 '.' Exp15                           (88)
	Exp14 -> Exp14 '++'                                (89)
	Exp14 -> Exp14 '--'                                (90)
	Exp14 -> Exp14 '->' Exp15                          (91)
	Exp14 -> Exp15                                     (92)
	Exp13 -> '!' Exp13                                 (93)
	Exp13 -> '*' Exp13                                 (94)
	Exp13 -> '++' Exp13                                (95)
	Exp13 -> '--' Exp13                                (96)
	Exp13 -> Exp14                                     (97)
	Exp12 -> Exp12 '*' Exp13                           (98)
	Exp12 -> Exp12 '/' Exp13                           (99)
	Exp12 -> Exp12 '%' Exp13                           (100)
	Exp12 -> Exp13                                     (101)
	Exp11 -> Exp11 '+' Exp12                           (102)
	Exp11 -> Exp11 '-' Exp12                           (103)
	Exp11 -> Exp12                                     (104)
	Exp10 -> Exp10 '<<' Exp11                          (105)
	Exp10 -> Exp10 '>>' Exp11                          (106)
	Exp10 -> Exp11                                     (107)
	Exp9 -> Exp9 '<' Exp10                             (108)
	Exp9 -> Exp9 '>' Exp10                             (109)
	Exp9 -> Exp9 '<=' Exp10                            (110)
	Exp9 -> Exp9 '>=' Exp10                            (111)
	Exp9 -> Exp10                                      (112)
	Exp8 -> Exp8 '==' Exp9                             (113)
	Exp8 -> Exp8 '!=' Exp9                             (114)
	Exp8 -> Exp9                                       (115)
	Exp4 -> Exp4 '&&' Exp5                             (116)
	Exp4 -> Exp5                                       (117)
	Exp3 -> Exp3 '||' Exp4                             (118)
	Exp3 -> Exp3 '=' Exp4                              (119)
	Exp3 -> Exp4                                       (120)
	Exp2 -> Exp3 '-=' Exp2                             (121)
	Exp2 -> Exp3 '+=' Exp2                             (122)
	Exp2 -> Exp3 '?' Exp2 ':' Exp2                     (123)
	Exp2 -> Exp3                                       (124)
	Exp1 -> 'throw' Exp1                               (125)
	Exp1 -> Exp2                                       (126)
	Exp -> Exp1                                        (127)
	Exp5 -> Exp6                                       (128)
	Exp6 -> Exp7                                       (129)
	Exp7 -> Exp8                                       (130)
	ListExp ->                                         (131)
	ListExp -> Exp                                     (132)
	ListExp -> Exp ',' ListExp                         (133)
	ListString -> String                               (134)
	ListString -> String ListString                    (135)
	ListId -> Id                                       (136)
	ListId -> Id ',' ListId                            (137)
	Type -> 'bool'                                     (138)
	Type -> 'double'                                   (139)
	Type -> 'float'                                    (140)
	Type -> 'int'                                      (141)
	Type -> 'void'                                     (142)
	Type -> 'char'                                     (143)
	Type -> QualifiedConstant                          (144)
	Type -> Type '&'                                   (145)
	Types -> Type                                      (146)
	QualifiedConstElem -> Id                           (147)
	QualifiedConstElem -> Id '<' ListTypes '>'         (148)
	ListTypes -> Types                                 (149)
	ListTypes -> Types ',' ListTypes                   (150)
	QualifiedConstant -> ListQualifiedConstElem        (151)
	ListQualifiedConstElem -> QualifiedConstElem       (152)
	ListQualifiedConstElem -> QualifiedConstElem '::' ListQualifiedConstElem   (153)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'char'         { PT _ (TS _ 34) }
	'const'        { PT _ (TS _ 35) }
	'do'           { PT _ (TS _ 36) }
	'double'       { PT _ (TS _ 37) }
	'else'         { PT _ (TS _ 38) }
	'false'        { PT _ (TS _ 39) }
	'float'        { PT _ (TS _ 40) }
	'for'          { PT _ (TS _ 41) }
	'if'           { PT _ (TS _ 42) }
	'int'          { PT _ (TS _ 43) }
	'return'       { PT _ (TS _ 44) }
	'throw'        { PT _ (TS _ 45) }
	'true'         { PT _ (TS _ 46) }
	'typedef'      { PT _ (TS _ 47) }
	'using'        { PT _ (TS _ 48) }
	'void'         { PT _ (TS _ 49) }
	'while'        { PT _ (TS _ 50) }
	'{'            { PT _ (TS _ 51) }
	'||'           { PT _ (TS _ 52) }
	'}'            { PT _ (TS _ 53) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pListArg rule  3
	%start_pListStm rule  4
	%start_pArg     rule  5
	%start_pDecl    rule  6
	%start_pStm     rule  7
	%start_pExp16   rule  8
	%start_pExp15   rule  9
	%start_pExp14   rule  10
	%start_pExp13   rule  11
	%start_pExp12   rule  12
	%start_pExp11   rule  13
	%start_pExp10   rule  14
	%start_pExp9    rule  15
	%start_pExp8    rule  16
	%start_pExp4    rule  17
	%start_pExp3    rule  18
	%start_pExp2    rule  19
	%start_pExp1    rule  20
	%start_pExp     rule  21
	%start_pExp5    rule  22
	%start_pExp6    rule  23
	%start_pExp7    rule  24
	%start_pListExp rule  25
	%start_pListString rule  26
	%start_pListId  rule  27
	%start_pType    rule  28
	%start_pTypes   rule  29
	%start_pQualifiedConstElem rule  30
	%start_pListTypes rule  31
	%start_pQualifiedConstant rule  32
	%start_pListQualifiedConstElem rule  33
	Integer         rule  34
	Double          rule  35
	Char            rule  36
	String          rule  37
	Id              rule  38
	Program         rule  39
	Def             rules 40, 41, 42, 43, 44, 45
	ListDef         rules 46, 47
	ListArg         rules 48, 49, 50
	ListStm         rules 51, 52
	Arg             rules 53, 54, 55, 56, 57, 58
	Decl            rules 59, 60, 61, 62, 63, 64, 65
	Stm             rules 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76
	Exp16           rules 77, 78, 79, 80, 81, 82, 83, 84
	Exp15           rules 85, 86, 87
	Exp14           rules 88, 89, 90, 91, 92
	Exp13           rules 93, 94, 95, 96, 97
	Exp12           rules 98, 99, 100, 101
	Exp11           rules 102, 103, 104
	Exp10           rules 105, 106, 107
	Exp9            rules 108, 109, 110, 111, 112
	Exp8            rules 113, 114, 115
	Exp4            rules 116, 117
	Exp3            rules 118, 119, 120
	Exp2            rules 121, 122, 123, 124
	Exp1            rules 125, 126
	Exp             rule  127
	Exp5            rule  128
	Exp6            rule  129
	Exp7            rule  130
	ListExp         rules 131, 132, 133
	ListString      rules 134, 135
	ListId          rules 136, 137
	Type            rules 138, 139, 140, 141, 142, 143, 144, 145
	Types           rule  146
	QualifiedConstElem rules 147, 148
	ListTypes       rules 149, 150
	QualifiedConstant rule  151
	ListQualifiedConstElem rules 152, 153

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 46
	'char'         reduce using rule 46
	'const'        reduce using rule 46
	'double'       reduce using rule 46
	'float'        reduce using rule 46
	'int'          reduce using rule 46
	'typedef'      reduce using rule 46
	'using'        reduce using rule 46
	'void'         reduce using rule 46
	L_Id           reduce using rule 46
	%eof           reduce using rule 46

	Program        goto state 138
	ListDef        goto state 139

State 1


	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'const'        shift, and enter state 125
	'double'       shift, and enter state 48
	'float'        shift, and enter state 49
	'int'          shift, and enter state 50
	'typedef'      shift, and enter state 136
	'using'        shift, and enter state 137
	'void'         shift, and enter state 51
	L_Id           shift, and enter state 39

	Id             goto state 36
	Def            goto state 133
	Decl           goto state 134
	Type           goto state 135
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 45
	ListQualifiedConstElemgoto state 41

State 2


	'bool'         reduce using rule 46
	'char'         reduce using rule 46
	'const'        reduce using rule 46
	'double'       reduce using rule 46
	'float'        reduce using rule 46
	'int'          reduce using rule 46
	'typedef'      reduce using rule 46
	'using'        reduce using rule 46
	'void'         reduce using rule 46
	L_Id           reduce using rule 46
	%eof           reduce using rule 46

	ListDef        goto state 132

State 3


	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'const'        shift, and enter state 128
	'double'       shift, and enter state 48
	'float'        shift, and enter state 49
	'int'          shift, and enter state 50
	'void'         shift, and enter state 51
	L_Id           shift, and enter state 39
	%eof           reduce using rule 48

	Id             goto state 36
	ListArg        goto state 130
	Arg            goto state 131
	Type           goto state 127
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 45
	ListQualifiedConstElemgoto state 41

State 4


	'!'            reduce using rule 51
	'('            reduce using rule 51
	'*'            reduce using rule 51
	'++'           reduce using rule 51
	'--'           reduce using rule 51
	'bool'         reduce using rule 51
	'char'         reduce using rule 51
	'const'        reduce using rule 51
	'do'           reduce using rule 51
	'double'       reduce using rule 51
	'false'        reduce using rule 51
	'float'        reduce using rule 51
	'for'          reduce using rule 51
	'if'           reduce using rule 51
	'int'          reduce using rule 51
	'return'       reduce using rule 51
	'throw'        reduce using rule 51
	'true'         reduce using rule 51
	'typedef'      reduce using rule 51
	'void'         reduce using rule 51
	'while'        reduce using rule 51
	'{'            reduce using rule 51
	L_integ        reduce using rule 51
	L_doubl        reduce using rule 51
	L_charac       reduce using rule 51
	L_quoted       reduce using rule 51
	L_Id           reduce using rule 51
	%eof           reduce using rule 51

	ListStm        goto state 129

State 5


	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'const'        shift, and enter state 128
	'double'       shift, and enter state 48
	'float'        shift, and enter state 49
	'int'          shift, and enter state 50
	'void'         shift, and enter state 51
	L_Id           shift, and enter state 39

	Id             goto state 36
	Arg            goto state 126
	Type           goto state 127
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 45
	ListQualifiedConstElemgoto state 41

State 6


	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'const'        shift, and enter state 125
	'double'       shift, and enter state 48
	'float'        shift, and enter state 49
	'int'          shift, and enter state 50
	'void'         shift, and enter state 51
	L_Id           shift, and enter state 39

	Id             goto state 36
	Decl           goto state 124
	Type           goto state 114
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 45
	ListQualifiedConstElemgoto state 41

State 7


	'!'            shift, and enter state 84
	'('            shift, and enter state 85
	'*'            shift, and enter state 86
	'++'           shift, and enter state 87
	'--'           shift, and enter state 88
	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'const'        shift, and enter state 116
	'do'           shift, and enter state 117
	'double'       shift, and enter state 48
	'false'        shift, and enter state 89
	'float'        shift, and enter state 49
	'for'          shift, and enter state 118
	'if'           shift, and enter state 119
	'int'          shift, and enter state 50
	'return'       shift, and enter state 120
	'throw'        shift, and enter state 90
	'true'         shift, and enter state 91
	'typedef'      shift, and enter state 121
	'void'         shift, and enter state 51
	'while'        shift, and enter state 122
	'{'            shift, and enter state 123
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Decl           goto state 111
	Stm            goto state 112
	Exp16          goto state 64
	Exp15          goto state 65
	Exp14          goto state 66
	Exp13          goto state 67
	Exp12          goto state 68
	Exp11          goto state 69
	Exp10          goto state 70
	Exp9           goto state 71
	Exp8           goto state 72
	Exp4           goto state 73
	Exp3           goto state 74
	Exp2           goto state 75
	Exp1           goto state 76
	Exp            goto state 113
	Exp5           goto state 78
	Exp6           goto state 79
	Exp7           goto state 80
	ListString     goto state 82
	Type           goto state 114
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 115
	ListQualifiedConstElemgoto state 41

State 8


	'('            shift, and enter state 85
	'false'        shift, and enter state 89
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 36
	Exp16          goto state 110
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 9


	'('            shift, and enter state 85
	'false'        shift, and enter state 89
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Exp16          goto state 64
	Exp15          goto state 109
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 10


	'('            shift, and enter state 85
	'false'        shift, and enter state 89
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Exp16          goto state 64
	Exp15          goto state 65
	Exp14          goto state 108
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 11


	'!'            shift, and enter state 84
	'('            shift, and enter state 85
	'*'            shift, and enter state 86
	'++'           shift, and enter state 87
	'--'           shift, and enter state 88
	'false'        shift, and enter state 89
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Exp16          goto state 64
	Exp15          goto state 65
	Exp14          goto state 66
	Exp13          goto state 107
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 12


	'!'            shift, and enter state 84
	'('            shift, and enter state 85
	'*'            shift, and enter state 86
	'++'           shift, and enter state 87
	'--'           shift, and enter state 88
	'false'        shift, and enter state 89
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Exp16          goto state 64
	Exp15          goto state 65
	Exp14          goto state 66
	Exp13          goto state 67
	Exp12          goto state 106
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 13


	'!'            shift, and enter state 84
	'('            shift, and enter state 85
	'*'            shift, and enter state 86
	'++'           shift, and enter state 87
	'--'           shift, and enter state 88
	'false'        shift, and enter state 89
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Exp16          goto state 64
	Exp15          goto state 65
	Exp14          goto state 66
	Exp13          goto state 67
	Exp12          goto state 68
	Exp11          goto state 105
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 14


	'!'            shift, and enter state 84
	'('            shift, and enter state 85
	'*'            shift, and enter state 86
	'++'           shift, and enter state 87
	'--'           shift, and enter state 88
	'false'        shift, and enter state 89
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Exp16          goto state 64
	Exp15          goto state 65
	Exp14          goto state 66
	Exp13          goto state 67
	Exp12          goto state 68
	Exp11          goto state 69
	Exp10          goto state 104
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 15


	'!'            shift, and enter state 84
	'('            shift, and enter state 85
	'*'            shift, and enter state 86
	'++'           shift, and enter state 87
	'--'           shift, and enter state 88
	'false'        shift, and enter state 89
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Exp16          goto state 64
	Exp15          goto state 65
	Exp14          goto state 66
	Exp13          goto state 67
	Exp12          goto state 68
	Exp11          goto state 69
	Exp10          goto state 70
	Exp9           goto state 103
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 16


	'!'            shift, and enter state 84
	'('            shift, and enter state 85
	'*'            shift, and enter state 86
	'++'           shift, and enter state 87
	'--'           shift, and enter state 88
	'false'        shift, and enter state 89
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Exp16          goto state 64
	Exp15          goto state 65
	Exp14          goto state 66
	Exp13          goto state 67
	Exp12          goto state 68
	Exp11          goto state 69
	Exp10          goto state 70
	Exp9           goto state 71
	Exp8           goto state 102
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 17


	'!'            shift, and enter state 84
	'('            shift, and enter state 85
	'*'            shift, and enter state 86
	'++'           shift, and enter state 87
	'--'           shift, and enter state 88
	'false'        shift, and enter state 89
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Exp16          goto state 64
	Exp15          goto state 65
	Exp14          goto state 66
	Exp13          goto state 67
	Exp12          goto state 68
	Exp11          goto state 69
	Exp10          goto state 70
	Exp9           goto state 71
	Exp8           goto state 72
	Exp4           goto state 101
	Exp5           goto state 78
	Exp6           goto state 79
	Exp7           goto state 80
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 18


	'!'            shift, and enter state 84
	'('            shift, and enter state 85
	'*'            shift, and enter state 86
	'++'           shift, and enter state 87
	'--'           shift, and enter state 88
	'false'        shift, and enter state 89
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Exp16          goto state 64
	Exp15          goto state 65
	Exp14          goto state 66
	Exp13          goto state 67
	Exp12          goto state 68
	Exp11          goto state 69
	Exp10          goto state 70
	Exp9           goto state 71
	Exp8           goto state 72
	Exp4           goto state 73
	Exp3           goto state 100
	Exp5           goto state 78
	Exp6           goto state 79
	Exp7           goto state 80
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 19


	'!'            shift, and enter state 84
	'('            shift, and enter state 85
	'*'            shift, and enter state 86
	'++'           shift, and enter state 87
	'--'           shift, and enter state 88
	'false'        shift, and enter state 89
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Exp16          goto state 64
	Exp15          goto state 65
	Exp14          goto state 66
	Exp13          goto state 67
	Exp12          goto state 68
	Exp11          goto state 69
	Exp10          goto state 70
	Exp9           goto state 71
	Exp8           goto state 72
	Exp4           goto state 73
	Exp3           goto state 74
	Exp2           goto state 99
	Exp5           goto state 78
	Exp6           goto state 79
	Exp7           goto state 80
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 20


	'!'            shift, and enter state 84
	'('            shift, and enter state 85
	'*'            shift, and enter state 86
	'++'           shift, and enter state 87
	'--'           shift, and enter state 88
	'false'        shift, and enter state 89
	'throw'        shift, and enter state 90
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Exp16          goto state 64
	Exp15          goto state 65
	Exp14          goto state 66
	Exp13          goto state 67
	Exp12          goto state 68
	Exp11          goto state 69
	Exp10          goto state 70
	Exp9           goto state 71
	Exp8           goto state 72
	Exp4           goto state 73
	Exp3           goto state 74
	Exp2           goto state 75
	Exp1           goto state 98
	Exp5           goto state 78
	Exp6           goto state 79
	Exp7           goto state 80
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 21


	'!'            shift, and enter state 84
	'('            shift, and enter state 85
	'*'            shift, and enter state 86
	'++'           shift, and enter state 87
	'--'           shift, and enter state 88
	'false'        shift, and enter state 89
	'throw'        shift, and enter state 90
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Exp16          goto state 64
	Exp15          goto state 65
	Exp14          goto state 66
	Exp13          goto state 67
	Exp12          goto state 68
	Exp11          goto state 69
	Exp10          goto state 70
	Exp9           goto state 71
	Exp8           goto state 72
	Exp4           goto state 73
	Exp3           goto state 74
	Exp2           goto state 75
	Exp1           goto state 76
	Exp            goto state 97
	Exp5           goto state 78
	Exp6           goto state 79
	Exp7           goto state 80
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 22


	'!'            shift, and enter state 84
	'('            shift, and enter state 85
	'*'            shift, and enter state 86
	'++'           shift, and enter state 87
	'--'           shift, and enter state 88
	'false'        shift, and enter state 89
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Exp16          goto state 64
	Exp15          goto state 65
	Exp14          goto state 66
	Exp13          goto state 67
	Exp12          goto state 68
	Exp11          goto state 69
	Exp10          goto state 70
	Exp9           goto state 71
	Exp8           goto state 72
	Exp5           goto state 96
	Exp6           goto state 79
	Exp7           goto state 80
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 23


	'!'            shift, and enter state 84
	'('            shift, and enter state 85
	'*'            shift, and enter state 86
	'++'           shift, and enter state 87
	'--'           shift, and enter state 88
	'false'        shift, and enter state 89
	'true'         shift, and enter state 91
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 92
	L_charac       shift, and enter state 93
	L_quoted       shift, and enter state 59
	L_Id           shift, and enter state 39

	Integer        goto state 60
	Double         goto state 61
	Char           goto state 62
	String         goto state 57
	Id             goto state 63
	Exp16          goto state 64
	Exp15          goto state 65
	Exp14          goto state 66
	Exp13          goto state 67
	Exp12          goto state 68
	Exp11          goto state 69
	Exp10          goto state 70
	Exp9           goto state 71
	Exp8           goto state 72
	Exp6           goto state 95
	Exp7           goto state 80
	ListString     goto state 82
	QualifiedConstElemgoto state 37
	QualifiedConstantgoto state 83
	ListQualifiedConstElemgoto state 41

State 24

